--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ amqp==2.4.0
 redis==2.10.6
 redis-py-cluster==1.3.6
 kombu==4.4.0
-psycopg2==2.8.2
+psycopg2-binary==2.8.3
 elasticsearch==2.3.0
 tblib==1.4.0
+pymysql==0.9.3
